--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -5,6 +5,7 @@
     overflow: scroll;
     text-align: center;
     font-weight: bold;
+    font-size: 1.2rem;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
@@ -13,7 +14,6 @@
         height: 300px;
     }
 }
-
 
 @media (min-width: 500px) and (min-height: 401px) {
     .Burger {
