--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 body {
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Open Sans', sans-serif;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
 }
